# FEUP-Projeto-CAL

./: README.md  README.txt  ~$latorio.odt  ~$latorio2.docx
src/: .gitignore  CMakeLists.txt  main.cpp
src/GraphViewerCpp/include/: graphviewer.h
src/GraphViewerCpp/src/: graphviewer.cpp
src/bakery/: Bakery.cpp  Bakery.h  Client.cpp  Client.h  InputGenerator.cpp  InputGenerator.h  Interface.cpp  Interface.h  Van.cpp  Van.h
src/bakeryInput/: bakery.txt  bakeryTemplate.txt
src/graph/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Vertex.cpp  Vertex.h
src/resources/bakeryInput/: al1.txt  al10.txt  al11.txt  al12.txt  al3.txt  al5.txt  al8.txt  bakery.txt  bakeryEspinho.txt  bakeryEspinho1.txt  bakeryEspinho2.txt  bakeryGrid1.txt  bakeryGrid2.txt  bakeryGrid3.txt  bakeryPenafiel.txt  bakeryPenafiel1.txt  bakeryPenafiel2.txt  bakeryPorto.txt  bakeryPorto1.txt  bakeryPorto2.txt  bakeryTemplate.txt  multipleVans.txt  multipleVansAveiro.txt  multipleVansDirected.txt  multipleVansPenafiel.txt  nn1.txt  nn10.txt  nn11.txt  nn12.txt  nn2.txt  nn3.txt  nn4.txt  nn5.txt  nn6.txt  nn7.txt  nn8.txt  nn9.txt  out1.txt  pre10.txt  pre11.txt  (+13 more)
src/resources/bakeryInput/al/: al2.txt  al4.txt  al6.txt  al7.txt  al9.txt
src/resources/bakeryInput/pre/: pre1.txt  pre5.txt  (+2 more)
src/resources/results/: bakeryResult.txt
src/resources/timedResults/: 2nd_results.txt  T1_results.txt  T2_results.txt  T3_results.txt  T4_results.txt  knapsack_results.txt  nn_results.txt  preprocess_results.txt
src/utils/: GraphBuidler.cpp  GraphBuilder.cpp  GraphBuilder.h  Position.cpp  Position.h  Time.cpp  Time.h
(+9 files in other folders)
